--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 .nav-wrapper {
     background-color: #dee76b;
+    /*box-shadow: 2px 2px 2px #999999;*/
 }
 
 nav,
@@ -29,8 +30,9 @@ a {
 
 .city-tag {
     position: absolute;
-    left: 62%;
-    top: 133%;
+    border-bottom:3px solid #c6ff00;
+    left: 63%;
+    top: 120%;
     z-index: 1;
     font-size: 100px;
     /* padding-bottom: 0px;
@@ -40,6 +42,19 @@ a {
     font-family: 'Mr De Haviland', cursive;
 }
 
+.instructions-tag {
+    position: absolute;
+    left: 5%;
+    top: 140%;
+    z-index: 1;
+    font-size: 30px;
+    /* padding-bottom: 0px;
+    border-bottom: 5px solid #c6ff00; */
+    font-weight: bold;
+    color: #333333;
+    font-family: 'Raleway', sans-serif;
+}
+
 .page-footer {
     text-align: center;
     background-color: #03a9f4;
@@ -47,22 +62,20 @@ a {
 
 .start-it {
     position: absolute;
-    top: 30%;
-    left: 10%;
+    top: 25%;
+    left: 4%;
     font-family: 'Raleway', sans-serif;
-    font-size: 40px;
+    font-size: 42px;
     /* font-weight: bold; */
     color: ffeb3b;
 }
 
 .background-image {
-    max-height: 980px;
+    max-height: 850px;
     max-width: auto;
-    height: auto;
+    height: 100%;
     width: 100%;
-    background-repeat: no-repeat;
     background-size: cover;
-    /* filter: grayscale(100%); */
     z-index: 0;
     position: relative;
     background-position: center center;
@@ -92,10 +105,10 @@ a {
 #map {
     position: absolute;
     z-index: 1;
-    top: 150%;
-    left: 46%;
+    top: 135%;
+    left: 48%;
     height: 500px;
-    width: 50%;
+    width: 45%;
     border-radius: 7px;
 }
 
@@ -123,10 +136,15 @@ a {
 
 .portfolio {
     position: absolute;
+    border-radius:20px;
     top: 20%;
     left: 70%;
     height: 5%;
     width: 40%;
+}
+
+.card {
+
 }
 
 .no-video .video-container video,
